--- a/BFL/index.html
+++ b/BFL/index.html
@@ -112,6 +112,28 @@
         </div>
     </section>
 
+    <!--Talleres-->
+    <section class="taller">
+      <div class="encabeza container-fluid d-flex flex-column justify-content-center align-items-center">
+        <h1>TALLERES</h1>
+        <h4>Somos mas que una familia de baloncesto</h4>
+      </div>
+      <div class="cursos container-fluid embed-responsive embed-responsive-16by9">
+        <div class="d-flex container-fluid flex-column justify-content-around align-items-center">
+          <iframe class="embed-responsive-item" src="Video/cancha.webm" allowfullscreen></iframe>
+          <h3>Cursos de programacion desde Web Development hasta Machine Learning</h3>
+        </div>
+        <div class="d-flex container-fluid flex-column justify-content-around align-items-center">
+          <img class="foto rounded-pill" src="images/idioma.jpg" alt="Foto de curso idioma">
+          <h3>Cursos de idiomas dados por nativo-hablantes</h3>
+        </div>
+        <div class="d-flex container-fluid flex-column justify-content-around align-items-center">
+          <img class="foto rounded-pill" src="images/horti.jpg" alt="Foto de curso idioma">
+          <h3>Cursos de horticultura</h3>  
+        </div>
+      </div>
+    </section>
+
     <!--Footer-->
     <div class="container">
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
