--- a/BFL/index.html
+++ b/BFL/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-md navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img class="logo" src="images/logo.png" alt="Logo de pagina web">
+            <img class="logo" src="images/logo.jfif" alt="Logo de pagina web">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
